# cloak-squads

./: .env.example  .gitignore  .gitleaks.toml  Anchor.toml  Cargo.toml  HANDOFF.md  README.md  ROADMAP.md  ROAD_TO_MAINNET.md  biome.json  claude-session.jsonl  docker-compose.yml  package.json  pnpm-lock.yaml  render-mainnet.yaml  render.yaml  tsconfig.base.json  tsconfig.json  turbo.json
.githooks/: pre-commit
.github/: dependabot.yml
.superstack/: build-context.md
docs/: API_AUTH_MATRIX.md  API_CONTRACTS.md  ARCHITECTURE.md  BACKEND_PLAYBOOK.md  CLOAK_MOCK_REMOVAL.md  CORS_S3_CIRCUITS_ERROR.md  DEMO.md  DEMO_SCRIPT.md  DEMO_SCRIPT_3MIN.md  DEVNET_DEMO_READY.md  DEVNET_TESTING.md  HANDOFF.md  HANDOFF_NEXT_AGENT.md  HANDOFF_REMOVE_MOCK.md  IMPLEMENTATION_PLAYBOOK.md  INVENTARIO_COMPLETO.md  INVESTIGATION_REPORT.md  MELHORIAS_DETALHADAS.md  MELHORIAS_DETALHADAS.v1.md.bak  MELHORIAS_DETALHADAS.v2.md  REDESIGN.md  SECURITY.md  SYSTEM_DIAGRAMS.md  TECH_DEBT.md  VALIDATION_LOG_ACCOUNTS.md  cloak-discord-message.md  cloak-discord-report.md  cloak-real-integration-analysis.md  cloak-relay-report.md  devnet-blocker.md  spike-findings.md
programs/cloak-gatekeeper/: Anchor.toml  Cargo.toml
programs/cloak-gatekeeper/src/: errors.rs  events.rs  lib.rs  state.rs  utils.rs
programs/cloak-gatekeeper/src/instructions/: add_signer_view.rs  close_expired_license.rs  emergency_close_license.rs  execute_with_license.rs  init_cofre.rs  init_view_distribution.rs  issue_license.rs  mod.rs  remove_signer_view.rs  revoke_audit.rs  set_operator.rs
programs/cloak-mock/: Anchor.toml  Cargo.toml
programs/cloak-mock/src/: lib.rs  state.rs
programs/cloak-squads-test-harness/: Cargo.toml
programs/cloak-squads-test-harness/src/: lib.rs
scripts/: .demo-cofre-2ofn.json  approve-and-execute-gov-tx.ts  backfill-vault-income-from.ts  build-verifiable.sh  check-governance-members.ts  compliance-export.ts  deploy-cloak-mock.ts  deploy-gatekeeper.ts  diag-program-version.ts  diag-proposal-66.ts  drain-leaked-demo-cofre.ts  execute-gov-tx-raw.ts  extend-program-data.ts  f1-e2e-devnet.ts  (+22 more)
(+387 files in other folders)
