[package]
name = "cloak-gatekeeper"
version = "0.1.0"
description = "Squads-gated private execution module for Cloak shielded pool"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cloak_gatekeeper"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
solana-program = "~1.18"
