[package]
name = "cloak-gatekeeper"
version = "0.1.0"
description = "Squads-gated private execution module for Cloak shielded pool"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cloak_gatekeeper"

[features]
default = []
# Use `--features mainnet` to target the real Cloak program instead of the devnet mock.
mainnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
