[package]
name = "cloak-mock"
version = "0.1.0"
description = "Development stub for Cloak shielded pool integration tests"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cloak_mock"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
solana-program = "~1.18"
